--- a/blogs/ride-smart-live-green.html
+++ b/blogs/ride-smart-live-green.html
@@ -63,9 +63,9 @@
                     </div>
                     <div class="top-right">
                         <ul class="top-header-nav">
-                            <li><a href="faqs.html">Help</a></li>
-                            <li><a href="contact.html">Support</a></li>
-                            <li><a href="faqs.html">FAQ</a></li>
+                            <li><a href="faqs.php">Help</a></li>
+                            <li><a href="contact-us.html">Support</a></li>
+                            <li><a href="faqs.php">FAQ</a></li>
                         </ul>
                         <ul class="header-social-share">
                             <li><a href="#"><i class="fab fa-facebook-f"></i></a></li>
@@ -154,19 +154,19 @@
                                     <li><a href="our-drivers.html">Our Drivers</a></li>
                                     <li><a href="driver-details.html">Driver Details</a></li>
                                     <li><a href="testimonials.html">Customer Reviews</a></li>
-                                    <li><a href="faqs.html">Help &amp; Faq's</a></li>
+                                    <li><a href="faqs.php">Help &amp; Faq's</a></li>
                                     <li><a href="404.html">404 Error</a></li>
                                 </ul>
                             </li>
                             <li class="active dropdown_menu">
-                                <a href="blog-grid.html">Blog</a>
+                                <a href="blog.html">Blog</a>
                                 <ul>
-                                    <li><a href="blog-grid.html">Grid Posts</a></li>
+                                    <li><a href="blog.html">Grid Posts</a></li>
                                     <li><a href="blog-classic.html">Classic Posts</a></li>
                                     <li><a href="blog-details.html">Blog Details</a></li>
                                 </ul>
                             </li>
-                            <li><a href="contact.html">Contact</a></li>
+                            <li><a href="contact-us.html">Contact</a></li>
                         </ul>
                     </div>
                     <div class="menu-right-item">
@@ -313,10 +313,10 @@
                             </div>
                             <ul class="footer-links">
                                 <li><a href="book-taxi.html">Taxi Booking</a></li>
-                                <li><a href="faqs.html">Help Center</a></li>
+                                <li><a href="faqs.php">Help Center</a></li>
                                 <li><a href="about-us.html">Privacy and Policy</a></li>
                                 <li><a href="about-company.html">Terms of Use</a></li>
-                                <li><a href="contact.html">Contact Us</a></li>
+                                <li><a href="contact-us.html">Contact Us</a></li>
                             </ul>
                         </div>
                     </div>
